Add new test for benchmark. Fic trace benchmark